--- a/Details.html
+++ b/Details.html
@@ -63,40 +63,42 @@
   <footer>
         <div class="footer">
             <div class="footer__first">
-                <div class="footer__h3 p">
+                <div class="footer__first__left">
                     <h3>Morent</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, asperiores.</p>
+                    <p>Our vision is to provide convenience and help increase your sales business.</p>
                 </div>
-                <div class="footer__ul">
-                    <div class="footer__ul__ul1">
-                        <h3><a href="">About</a></h3>
+                <div class="footer__first__right">
+                    <div class="footer__first__right__ul1">
+                        <h3><a href="#">About</a></h3>
                         <ul>
-                            <li><a href="">How it works</a></li>
-                            <li><a href="">Featured</a></li>
-                            <li><a href="">Partnership</a></li>
-                            <li><a href="">Biznes relation</a></li>
+                            <li><a href="#" id="link">How it works</a></li>
+                            <li><a href="#" id="link">Featured</a></li>
+                            <li><a href="#" id="link">Partnership</a></li>
+                            <li><a href="#" id="link">Biznes relation</a></li>
                         </ul>
                     </div>
-                    <div class="footer__ul__ul2">
-                        <h3><a href="">Community</a></h3>
+                    <div class="footer__first__right__ul2">
+                        <h3><a href="#">Community</a></h3>
                         <ul>
-                            <li><a href="">Events</a></li>
-                            <li><a href="">Blog</a></li>
-                            <li><a href="">Podcast</a></li>
-                            <li><a href="">Invite a friend</a></li>
+                            <li><a href="#">Events</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Podcast</a></li>
+                            <li><a href="#">Invite a friend</a></li>
                         </ul>
                     </div>
-                    <div class="footer__ul__ul3">
-                        <h3><a href="">Socials</a></h3>
+                    <div class="footer__first__right__ul3">
+                        <h3><a href="#">Socials</a></h3>
                         <ul>
-                            <li><a href="">Discord</a></li>
-                            <li><a href="">Instagram</a></li>
-                            <li><a href="">Twitter</a></li>
-                            <li><a href="">Facebook</a></li>
+                            <li><a href="#">Discord</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Facebook</a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+
+            
             <div class="footer__middle">
                 <div class="footer__middle__line">
 
@@ -107,8 +109,8 @@
                     <p>©2022 MORENT. All rights reserved</p>
                 </div>
                 <div class="footer__last__privacy">
-                    <h4><a href="">Privacy & Policy</a></h4>
-                    <h4><a href="">Terms & Condition</a></h4>
+                    <h4 ><a href="#">Privacy & Policy</a></h4>
+                    <h4><a href="#">Terms & Condition</a></h4>
                 </div>
             </div>
 
