--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/css/main.css">  
+    <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -14,7 +14,7 @@
 
 <body>
 
-    
+
     <header class="header">
         <div class="header__left">
             <div class="header__left__loqo">MORENT</div>
@@ -52,15 +52,93 @@
 
             <div class="header__right__firsticon"> <a href=""><i class="fa-solid fa-heart "></i></a>
             </div>
-            <div class="header__right__secondicon"> <a href=""><i class="fa-solid fa-bell "></i> <i class="fa-solid fa-circle header__right__secondicon__redicon"  ></i></a></div>
+            <div class="header__right__secondicon"> <a href=""><i class="fa-solid fa-bell "></i> <i
+                        class="fa-solid fa-circle header__right__secondicon__redicon"></i></a></div>
             <div class="header__right__thirdicon"> <a href=""><i class="fa-solid fa-gear "></i></a>
             </div>
             <img src="assets/image/header image.png" alt="header image" class="header__right__image">
 
         </div>
     </header>
-  
-  <footer>
+
+
+    <main class="main">
+        <section class="main__section1">
+            <div class="container main__section1__container">
+                <div class="row main__section1__container__row">
+                    <div class="col-6 main__section1__container__row__col6">
+                        <div class="about">
+
+                            <h3>The Best Platform for Car Rental</h3>
+                            <p>Ease of doing a car rental safely and reliably. Of course at a low price.</p>
+                            <a href="#">
+                                <div class="buttoninside">Rental Car</div>
+                            </a>
+                        </div>
+                        <img src="assets/image/BG.png" alt="fisrt" class="left">
+                    </div>
+                    <div class="col-6 main__section1__container__row__col6 ">
+                        <div class="about">
+
+                            <h3>Easy way to rent a car at a low price</h3>
+                            <p>Providing cheap car rental services and safe and comfortable facilities.</p>
+                            <a href="#" class="buttonlink">
+                                <div class="buttoninside2">Rental Car</div>
+                            </a>
+                        </div>
+                        <img src="assets/image/BG2.png" alt="second " class="right">
+                    </div>
+
+                </div>
+            </div>
+        </section>
+
+
+        <section class="main__section2">
+
+        </section>
+
+
+
+        <section class="main__section3">
+            <div class="main__section3__top">
+                <p class="main__section3__top__left">Popular Car</p>
+                <p class="main__section3__top__right">
+                    <a href="#">View All</a>
+                </p>
+            </div>
+            <div class="main__section3__bottom">
+
+                <div class="main__section3__bottom__container">
+                    <div class="main__section3__bottom_container__row">
+                        <div class="col-4">
+                            <h4>Nissan GT - R</h4>
+                            <p>Sport</p>
+                            <i class="fa-regular fa-heart"></i>
+                            <img src="assets/image/nissan gtr.png" alt="gtr">
+                            <div class="icons">
+                                <i class="fa-solid fa-gas-pump"></i>
+                                <p>80L</p>
+                                <i class="fa-solid fa-steering-wheel"></i>
+                                <p>Manual</p>
+
+                                <i class="fa-solid fa-user-group"></i>
+                                <p>2 People</p>
+                            </div>
+
+                            <div class="button">
+                                <p>$80.00/ day</p>
+                                <a href=""#>RENT NOW</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <footer>
         <div class="footer">
             <div class="footer__first">
                 <div class="footer__first__left">
@@ -98,7 +176,7 @@
                 </div>
             </div>
 
-            
+
             <div class="footer__middle">
                 <div class="footer__middle__line">
 
@@ -109,7 +187,7 @@
                     <p>©2022 MORENT. All rights reserved</p>
                 </div>
                 <div class="footer__last__privacy">
-                    <h4 ><a href="#">Privacy & Policy</a></h4>
+                    <h4><a href="#">Privacy & Policy</a></h4>
                     <h4><a href="#">Terms & Condition</a></h4>
                 </div>
             </div>
