--- a/Details.html
+++ b/Details.html
@@ -59,7 +59,174 @@
 
         </div>
     </header>
-  
+    <main class="details__main">
+        <div class="details__main__left">
+            <div class="details__main__left__first">
+                <ul>
+                    <span class="list__type">Type</span>
+                    <li><input type="checkbox">Sport (10)</li>
+                    <li><input type="checkbox">Sport (10)</li>
+                    <li><input type="checkbox">Sport (10)</li>
+                    <li><input type="checkbox">Sport (10)</li>
+                    <li><input type="checkbox">Sport (10)</li>
+                    <li><input type="checkbox">Sport (10)</li>
+                </ul>
+            </div>
+            <div class="details__main__left__middle">
+                <ul>
+                    <span class="list__capacity">Capacity</span>
+                    <li><input type="checkbox">2 Person (10)</li>
+                    <li><input type="checkbox">2 Person (10)</li>
+                    <li><input type="checkbox">2 Person (10)</li>
+                    <li><input type="checkbox">2 Person (10)</li>
+                </ul>
+            </div>
+            <div class="details__main__left__last">
+                <label for="price">price</label>
+                <input type="range" id="price">
+                <p>Max. $100.000</p>
+            </div>
+        </div>
+        <div class="details__right">
+            <div class="right__header">
+                <div class="right__header__image">
+                    <div class="right__header__image__first">
+                        <div class="right__header__text">
+                            <div class="right__header__image__header">
+                                Sports car with the best design and acceleration
+                            </div>
+                            <div class="right__header__image__middle">
+                                Safety and comfort while driving a futuristic and elegant sports car
+                            </div>
+                        </div>                       
+                    </div>
+                    <div class="right__header__images">
+                        <img src="https://media.istockphoto.com/id/1157655660/photo/generic-red-suv-on-a-white-background-side-view.jpg?s=612x612&w=0&k=20&c=ecrvXZhimUHnYES-kx7L5b-TDtRU5kAFPpNm0ZtAp1Y=" alt="">
+                        <img src="https://media.istockphoto.com/id/1157655660/photo/generic-red-suv-on-a-white-background-side-view.jpg?s=612x612&w=0&k=20&c=ecrvXZhimUHnYES-kx7L5b-TDtRU5kAFPpNm0ZtAp1Y=" alt="">
+                        <img src="https://media.istockphoto.com/id/1157655660/photo/generic-red-suv-on-a-white-background-side-view.jpg?s=612x612&w=0&k=20&c=ecrvXZhimUHnYES-kx7L5b-TDtRU5kAFPpNm0ZtAp1Y=" alt="">                        
+                    </div>
+                </div>
+                <div class="right__header__content">
+                    <div class="right__header__content__header">
+                        <div class="right__header__content__header__left">
+                            <h3>Nissan GT-R</h3>
+                            <div class="right__header__content__header__left__icons">
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-regular fa-star"></i></div>
+                                <p>440+ Reviwer</p>
+                            </div>
+                        </div>
+                        <div class="right__header__content__header__right">
+                            <div><i class="fa-solid fa-heart" style="color: #ff0000;"></i></div>
+                        </div>
+                    </div>
+                    <div class="right__header__content__middle">
+                        <div class="right__header__content__middle__first">
+                            <p>NISMO has become the embodiment of Nissan's outstanding performance, 
+                                inspired by the most unforgiving proving ground, the "race track".
+                            </p>
+                        </div>
+                        <div class="right__header__content__middle__last">
+                            <div class="right__header__content__middle__last__left">
+                                <div class="right__header__content__middle__last__left__1">
+                                    <p>Type car</p>
+                                    <h3>Sport</h3>
+                                </div>
+                                <div class="right__header__content__middle__last__left__2">
+                                    <p>Steering</p>
+                                    <h3>Manual</h3>
+                                </div>
+                            </div>
+                            <div class="right__header__content__middle__last__right">
+                                <div class="right__header__content__middle__last__right__1">
+                                    <p>Capacity</p>
+                                    <h3>2 Person</h3>
+                                </div>
+                                <div class="right__header__content__middle__last__right__2">
+                                    <p>Gasoline</p>
+                                    <h3>70L</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right__header__content__footer">
+                        <div class="right__header__content__footer__left">
+                            <div class="right__header__content__footer__left__1">
+                                <h2>$80.00/</h2>
+                                <p>days</p>
+                            </div>
+                            <p>100.00</p>
+                        </div>
+                        <button>Rent now</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="right__reviews">
+                <div class="right__reviews__header">
+                    <h3>Reviews</h3>
+                    <p>13</p>
+                </div>
+                <div class="right__reviews__content">
+                    <div class="right__reviews__content__1">
+                        <div class="right__reviews__content__1__img">
+                            <img src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?cs=srgb&dl=pexels-pixabay-220453.jpg&fm=jpg">
+                        </div>
+                        <div class="right__reviews__content__yazi">
+                            <h3>Alex Stanson</h3>
+                            <p>CEO at Bukalapak</p> <br>
+                            <div>
+                                <p>
+                                    We are very happy with the service from the MORENT App. Morent has a low price and also a large variety of cars with good and comfortable facilities. In addition, the service provided by the officers is also very friendly and very polite.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="right__reviews__content__1__icon">
+                            <div><p>21 July 2022</p></div>
+                            <div class="right__reviews__content__1__icon__all">
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-regular fa-star"></i></div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                <div class="right__reviews__content">
+                    <div class="right__reviews__content__1">
+                        <div class="right__reviews__content__1__img">
+                            <img src="https://www.perfocal.com/blog/content/images/2021/01/Perfocal_17-11-2019_TYWFAQ_82_standard-3.jpg">
+                        </div>
+                        <div class="right__reviews__content__yazi">
+                            <h3>Alex Stanson</h3>
+                            <p>CEO at Bukalapak</p> <br>
+                            <div>
+                                <p>
+                                    We are very happy with the service from the MORENT App. Morent has a low price and also a large variety of cars with good and comfortable facilities. In addition, the service provided by the officers is also very friendly and very polite.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="right__reviews__content__1__icon">
+                            <div><p>21 July 2022</p></div>
+                            <div class="right__reviews__content__1__icon__all">
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-solid fa-star" style="color: #FBAD39;"></i></div>
+                                <div><i class="fa-regular fa-star"></i></div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
   <footer>
         <div class="footer">
             <div class="footer__first">
