--- a/Home.html
+++ b/Home.html
@@ -17,6 +17,9 @@
 
     <header class="header">
         <div class="header__left">
+            <div class="mobileversion">
+                <i class="fa-solid fa-bars"></i>
+            </div>
             <div class="header__left__loqo">MORENT</div>
             <div class="header__left__search">
                 <a href="" class="header__left__search__inside">
@@ -72,18 +75,18 @@
 
                             <h3>The Best Platform for Car Rental</h3>
                             <p>Ease of doing a car rental safely and reliably. Of course at a low price.</p>
-                            <a href="#" class="buttonfirst">
+                            <a href="Details.html" class="buttonfirst">
                                 <div class="buttoninside">Rental Car</div>
                             </a>
                         </div>
                         <img src="assets/image/BG.png" alt="fisrt" class="left">
                     </div>
-                    <div class="col-6 main__section1__container__row__col6 ">
+                    <div class="col-6 main__section1__container__row__col6 rightcarsphoto">
                         <div class="about">
 
                             <h3>Easy way to rent a car at a low price</h3>
                             <p>Providing cheap car rental services and safe and comfortable facilities.</p>
-                            <a href="#" class="buttonsecondd">
+                            <a href="Details.html" class="buttonsecondd">
                                 <div class="buttoninside2">Rental Car</div>
                             </a>
                         </div>
@@ -96,9 +99,81 @@
 
 
         <section class="main__section2">
+            <form action="" method="post">
+                <div class="main__section2__container">
+                    <div class="main__section2__container__row">
+                        <div class="col5 main__section2__container__row__col5">
+                            <div class="selecimage">
+                                <img src="assets/image/knok.png" alt="knok">
+                                <p>Pick-Up</p>
+                            </div>
+                            <div class="selectdiv">
+                                <div class=" selects">
+                                    <p>Locations</p>
+                                    <select name="loc" id="loc">
+                                        <option value="" disabled hidden selected>Select your city</option>
+                                    </select>
+                                </div>
+                                <div class="selects ">
+                                    <p>Time</p>
+                                    <select name="date" id="date">
+                                        <option value="" disabled hidden selected>Select your time</option>
+                                    </select>
+                                </div>
+                                <div class="selects">
+                                    <p>Date</p>
+                                    <select name="date" id="date">
+                                        <option value="" disabled hidden selected>Select your date</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="main__section2__container__row">
+                        <div class="section2icon">
+                            <div class="col2 main__section2__container__row__col2"><i
+                                    class="fa-solid fa-right-left fa-rotate-90"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="main__section2__container__row">
+                        <div class="col5 main__section2__container__row__col5">
+                            <div class="selecimage">
+                                <img src="assets/image/knok.png" alt="knok">
+                                <p>Pick-Up</p>
+                            </div>
+                            <div class="selectdiv">
+                                <div class=" selects">
+                                    <p>Locations</p>
+                                    <select name="loc" id="loc">
+                                        <option value="" disabled hidden selected>Select your city</option>
+                                    </select>
+                                </div>
+                                <div class="selects ">
+                                    <p>Time</p>
+                                    <select name="date" id="date ">
+                                        <option value="" disabled hidden selected>Select your time</option>
+                                    </select>
+                                </div>
+                                <div class="selects">
+                                    <p>Date</p>
+                                    <select name="date" id="date">
+                                        <option value="" disabled hidden selected>Select your date</option>
+                                    </select>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </form>
 
 
-            
+
+
         </section>
 
 
@@ -107,7 +182,7 @@
             <div class="main__section3__top">
                 <p class="main__section3__top__left">Popular Car</p>
                 <p class="main__section3__top__right">
-                    <a href="#">View All</a>
+                    <a href="Shop.html">View All</a>
                 </p>
             </div>
             <div class="main__section3__bottom">
@@ -122,7 +197,8 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            </a>
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -173,7 +249,7 @@
 
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -224,7 +300,7 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -275,7 +351,7 @@
 
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -341,7 +417,7 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -391,7 +467,7 @@
                             <div class="wrapper">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -443,7 +519,7 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -493,7 +569,7 @@
                             <div class="wrapper">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -551,7 +627,7 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -602,7 +678,7 @@
 
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -653,7 +729,7 @@
 
                                 <i class="fa-solid fa-heart" style="color: #f20202;"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -704,7 +780,7 @@
 
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                            <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
+                            <a href="Details.html"> <img src="assets/image/nissan gtr.png" alt="gtr" class="carimg">
                             <div class="icons">
                                 <div>
                                     <i class="fa-solid fa-gas-pump"></i>
@@ -755,7 +831,7 @@
             <div class="main__section4__bottom2">
                 <div class="main__section4__bottom2__inside">
                     <div class="main__section4__bottom2__inside__left">
-                        <a href="#" class="showbutton">
+                        <a href="Shop.html" class="showbutton">
                             <p class="showinside">Show more car</p>
                         </a>
                     </div>
